[package]
name = "learning_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# math
num = "0.4.0"
libmath = "0.2.1"

#combinations
combinations = "0.1.0"

# visualization
colored = "2.0.0"

# random
rand = "0.8.5" 

# data structures
multimap = "0.8.3"

# parallel computing (loops etc.)
rayon = "1.5.3"

# async io
tokio = "1.20.1"

# gui programming
egui = "0.18.1"
eframe = "0.18.0"
epaint = "0.18.1"